Trying to fix logo issue on safari

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ nav .menu {
   /* width: 10%; */
   padding: 0px;
   display: block;
-  width: 100%;
+  /* width: 100%; */
   height: auto;
   max-width: 100%;
   max-height: 100px;
